.github/lean_quality/fixtures/research_legacy_refs/negative/direct/Formal/AG/Main.lean
import Formal.AG.Research.Basic
